fixing inage gap cuz of sqwishing

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ background-image: url('/static/backround-blur.jpg'); background-repeat: no-repea
 
 .music-images {
     display: flex;
-    gap: 20%;
+    gap: 40px;
     justify-content: center;
     align-items: center
 }
